# range-solver-lib

./: CMakeLists.txt  README.md  RELEASE_NOTES.txt
doc/: RELEASE_NOTES.md
include/: rconvection.h  reigenvaluesolver.h  rhemicube.h  rhemicubepixel.h  rhemicubesector.h  riterationinfo.h  riterationinfovalue.h  rlocalrotation.h  rmatrixmanager.h  rmatrixpreconditioner.h  rmatrixsolver.h  rscales.h  rsolver.h  rsolveracoustic.h  rsolverelectrostatics.h  rsolverfluid.h  rsolverfluidheat.h  rsolverfluidparticle.h  rsolvergeneric.h  rsolverheat.h  rsolvermagnetostatics.h  rsolvermesh.h  rsolverradiativeheat.h  rsolvershareddata.h  rsolverstress.h  rsolverwave.h
src/: rconvection.cpp  reigenvaluesolver.cpp  rhemicube.cpp  rhemicubepixel.cpp  rhemicubesector.cpp  riterationinfo.cpp  riterationinfovalue.cpp  rlocalrotation.cpp  rmatrixmanager.cpp  rmatrixpreconditioner.cpp  rmatrixsolver.cpp  rscales.cpp  rsolver.cpp  rsolveracoustic.cpp  rsolverelectrostatics.cpp  rsolverfluid.cpp  rsolverfluidheat.cpp  rsolverfluidparticle.cpp  rsolvergeneric.cpp  rsolverheat.cpp  rsolvermagnetostatics.cpp  rsolvermesh.cpp  rsolverradiativeheat.cpp  rsolvershareddata.cpp  rsolverstress.cpp  rsolverwave.cpp
tests/: CMakeLists.txt  tst_iteration_info_value.cpp  tst_local_rotation.cpp  tst_matrix_solver.cpp  tst_scales.cpp
